# SocialSparkAI

./: .gitignore  .replit  pyproject.toml  replit.md  requirements.txt  start_app.sh  start_backend.sh
backend/app/: auth.py  config.py  main.py  models.py  schemas.py  social_media_integrations.py
backend/app/routers/: auth.py  content.py  posts.py  preferences.py  social_accounts.py  users.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Navbar.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Calendar.jsx  Dashboard.jsx  GenerateContent.jsx  Login.jsx  Posts.jsx  Preferences.jsx  Register.jsx
frontend/src/services/: api.js
